--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,124 @@
+*{
+  margin: 0;padding: 0;
+}
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
+.menuStyle{
+  width: 100%;
+  height: 100px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menuStyle ul {
+  width: 70%;
+  height: 100px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: blue;
   color: white;
+  font-size: 22px;
+ position: absolute;
+  right:  0;
+  top: 0px;
+  margin: auto;
+}
+.menuStyle ul li{
+  list-style: none;
+  font-weight: bold;
+}
+.menuStyle img{
+  width: 30%;
+  height: 100px;
+  position: absolute;
+ left: 0;
+  top: 0px;
+    margin: auto;
+
+
 }
 
-.App-link {
-  color: #09d3ac;
+.homeStyle img{
+  width: 100%;
+  height: 100vh;
+}
+.aboutStyle{
+  width:400px;
+  height: 500px;
+  background-color: green;
+  position: relative;
+  margin-left: 40%;
+  margin-right:  50%;
+  border:2px solid blue;
+  border-radius: 20px;
+}
+.aboutStyle h1 {
+
+  position: absolute;
+  top: 240px;
+  left: 60px;
+  color: white;
+
+}
+.aboutStyle h2 {
+
+  position: absolute;
+  top: 300px;
+  left: 20px;
+  color: white;
+
+}
+.contactStyle{
+  width:400px;
+  height: 500px;
+  background-color: cyan;
+  position: relative;
+  margin-left: 40%;
+  margin-right:  50%;
+  border:2px solid blue;
+  border-radius: 20px;
+}
+.contactStyle h1 {
+
+  position: absolute;
+  top: 200px;
+  left: 60px;
+  color: purple;
+  text-shadow: 2px 2px yellow;
+
+}
+.contactStyle h2 {
+
+  position: absolute;
+  top: 250px;
+  left: 20px;
+  color: #a23fcc;
+
+}
+.helpStyle{
+  width:400px;
+  height: 500px;
+  background-color: red;
+  position: relative;
+  margin-left: 40%;
+  margin-right:  50%;
+  border:2px solid blue;
+  border-radius: 20px;
+}
+.helpStyle h1 {
+
+  position: absolute;
+  top: 200px;
+  left: 60px;
+  color: green;
+  text-shadow: 2px 2px yellow;
+
+}
+.helpStyle h2 {
+
+  position: absolute;
+  top: 250px;
+  left: 50px;
+  color: #aaff12;
+
 }
